=======
Changes
=======

1.5.4 (unreleased)
==================

- Rearrange ftesting.setUp to avoid provoking a DemoStorage bug
  present in ZODB <= 3.9.3.

1.5.3 (2009-11-15)
==================

- Made zc.async.subscribers.ThreadedDispatcherInstaller keep track of signal
  handlers it installs in a module global "signal_handlers."

- Made zc.async.ftesting.tearDown restore the signal handlers that were
  replaced by ThreadedDispatcherInstaller.

- Fix a bug in zc.async.ftesting.setUp and zc.async.testing.print_logs
  which would result in the default argument for log_file becoming
  "fixated" with an incorrect value across tests.

- Make the ftesting.txt test exercise the 'zc.async' logger in
  addition to 'zc.async.event'.

- zc.async.utils.dt_to_long coerces return value to long (test pass on 64-bit
  Python).

- Tests pass on Python 2.6

- The callable of a zc.async.job.Job (or one of its subclasses) can be a
  method on the Job itself.

1.5.2 (2009-07-22)
==================

- Fix a bug where zc.async.testing._datetime.now did not accept the same
  keyword arguments as datetime.datetime, added tests.

- Fix a bug where zc.async.testing._datetime.astimezone did not accept the same
  keyword arguments as datetime.datetime, added tests.

1.5.1 (2008-10-13)
==================

- Add a performance optimization with ``isinstance`` before ``providedBy``.

- Add support for filters to ``AgentInstaller``.

- Fix a bug which caused a condition to be always true in ``monitor.Encoder``.

1.5.0 (2008-09-21)
==================

- Documentation improvements.  Converted documentation into Sphinx system.

- Made "other" commit errors for the ``RetryCommonForever`` retry policy have
  an incremental backoff.  By default, this starts at 0 seconds, and increments
  by a second to a maximum of 60 seconds.

- Work around a memory leak in zope.i18nmessageid
  (https://bugs.launchpad.net/zope3/+bug/257657).  The change should be