@@ -8,6 +8,14 @@ Changes
 - Rearrange ftesting.setUp to avoid provoking a DemoStorage bug
   present in ZODB <= 3.9.3.
 
+- Resolved the following testing issues: signal handlers weren't cleaned
+  up properly in some tests, Twisted was leaking file descriptors during
+  ftesting tearDown (http://twistedmatrix.com/trac/ticket/3063), and
+  the twisted.txt regression test was not repeatable due to
+  Twisted's recalcitrance when it comes to stopping and subsequently
+  starting a reactor instance.
+
+
 1.5.3 (2009-11-15)
 ==================
 
